# android-file-transfer-linux

./: CMakeLists.txt
python/: CMakeLists.txt  aft.i
